# Orbis

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/orbisbox/: Cargo.toml
crates/orbisbox/src/: main.rs
crates/shell-cli/: Cargo.toml
crates/shell-cli/src/: main.rs
crates/shell-core/: Cargo.toml
crates/shell-core/src/: ast.rs  builtins.rs  env.rs  exec.rs  jobs.rs  lib.rs  parser.rs
scripts/: bootstrap-wsl.sh  install.sh
