[workspace]
resolver = "2"
members = [
  "crates/shell-core",
  "crates/shell-cli",
  "crates/orbisbox",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["jpere"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
nix = { version = "0.29", features = ["process", "signal", "term", "fs", "poll"] }
rustyline = "14"
shell-words = "1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
home = "=0.5.11"
