[package]
name = "orbis-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
glob = "0.3"
thiserror.workspace = true
shell-words.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
